# pcre2_finder

./: CMakeLists.txt  Changelog.txt  README.md
CMake/: FindPCRE2.cmake
doc/: Doxyfile
include/: pcre2_finder.h
lib/: pcre2_finder.c
src/: pcre2_finder_count.c  pcre2_finder_replace.c
